Documentation update and refactor -- split the docs and the tests

--- a/tests/select_list.html
+++ b/tests/select_list.html
@@ -13,31 +13,16 @@
 
 <hr>
 
-<p>
-    This widget allows you to bind a non-select list to trigger
-  changes on a &lt;select&gt; element.
-</p>
-
-<h2> How To: </h2>
+<h2> Description: </h2>
 
 <div class='description'>
-  <ol>
-    <li>
-      Group the select's components. (Link to group howto page)
-    </li>
-    <li> Set the 'data-ur-select-list-component' attribute to 'select'
-    on the target &lt;select&gt; tag.</li>
-    <li> Make sure that the elements in your list have the
-    same value attributes as the original &lt;option&gt; elements from
-    the target &lt;select&gt;</li>
-    <li>
-    Set the 'data-ur-select-list-component' attribute to 'content'
-    on the content list.
-    </li>
-  </ol>
+  <p>
+  This widget allows you to bind a non-select list to trigger
+  changes on a &lt;select&gt; element.
+  </p>
 </div>
 
-<h2> Tests: </h2>
+<h2> Examples: </h2>
 
 <div class='test' name='One'>
   <h3>Simple example.</h3>
