--- a/tests/zoom_preview.html
+++ b/tests/zoom_preview.html
@@ -14,7 +14,8 @@
 
 <hr>
 
-<h2> How To: </h2>
+<h2> Description: </h2>
+
 <div class='description'>
   <p>
   This is a widget to look at a large zoomed image with touch events
@@ -30,77 +31,9 @@
   skeleton image gallery widget.
   </p>
 
-  <p>
-    To setup zoom preview:
-  </p>
-    <ol>
-      <li>
-        Group the zoom-preview. You can do this with either the
-    structural method or the unique ID method (add link).
-      </li>
-      
-      <li> Identify the zoom-container. This should contain the normal
-      'hero' image that the thumbnails update. It should also contain
-      the zoom-button and zoom-image elements.
-        <ul>
-          <li>
-          Set the 'data-ur-zoom-preview-component' to 'container'
-          on the zoom-container.
-          </li>
-          <li>
-          Note : Its ok for the data-ur-set and zoom-container to be
-          the same element. This will probably be the case when you
-          don't have to deal with thumbnails.
-          </li>
-        </ul>
-      </li>
-      <li> Set the 'data-ur-zoom-preview-component' attribute to 'zoom_image' on the zoom image element (which
-      should be a descendant of the zoom-container).
-        <ul>
-          You can also specify a modifier rule for the zoom-image:
-          <li> Normally, when a thumbnail is clicked, its src
-        attribute is copied to the zoom image -- but this usually
-        results in an image thats much too small to zoom. </li>
-          <li> Set the 'data-ur-src-modifier-match' attribute's value to be the
-        match regex to be applied to the thumbnail image's src </li>
-          <li> Set the 'data-ur-src-modifier-replace' attribute's value to be
-        the replace string to be applied to the thumbnail image's src</li>
-          <li> Look at this page's html for an example of this </li>
-        </ul>
-      </li>
-     <li> Set the 'data-ur-zoom-preview-component' attribute to 'button' the button element (which
-      should be a descendant of the zoom-container). The 'loaded'
-        class is added to this element once the image has loaded.
-        <ul>
-          (Optional - but highly recommended) : Add a modifier rule
-        for the image displayed on the button. (Its good to modify the
-        url so that a giant image isn't displayed in a tiny
-        space. That results in slow re-paints which makes the UX
-        janky). This modifier gets applied to the zoom-image url
-        (after the zoom-image modifier gets applied):
-          <li> Set the 'data-ur-src-modifier-match' attribute's value to be the
-        match regex for the zoom-image src </li>
-          <li> Set the 'data-ur-src-modifier-replace' attribute's value to be
-        the replace string for the zoom-image src </li>
-        </ul>
-      </li>      
-      <li> Set the 'data-ur-zoom-preview-component' attribute to 'normal_image'
-      on the normal image. (The normal image must be a descendant of the zoom-container).
-        <ul>
-          Add a match/replace pair. These get applied to the normal
-          image src to generate the initial zoom-image url:
-          <li> Set the 'data-ur-zoom-modifier-match' attribute. </li>
-          <li> Set the 'data-ur-zoom-modifier-replace' attribute </li>
-        </ul>
-      </li>
-      <li> (Optional) Identify the zoom-thumbnails-container. This should contain
-      the all of the thumbnail images. Set the 'data-ur-zoom-preview-component' to 'thumbnails' the zoom-thumbnails-container
-     </li>
-    </ol>
-
 </div>
 
-<h2> Test:</h2>
+<h2> Examples:</h2>
 <div class='test' name='Simple'>
 
   <h3> Touch and Drag on the thumbnail to view the zoom preview </h3>
