--- a/tests/carousel.html
+++ b/tests/carousel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
 <html>
   <head>
-    <title> Select Buttons Unit Tests</title>
+    <title> Uranium - Carousel </title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     <script src="../build/src/uranium-pretty.js"></script>
     <link rel="stylesheet" type='text/css' href='css/test.css' />
@@ -14,12 +14,18 @@
 
     <hr>
 
-    <h2> Test: </h2>
+    <h2> Description: </h2>
+
+    <div class='description'>
+      <p>
+      The carousel is a widget to allow for horizontally scrolling (with touch or buttons) between a set of items. 
+      </p>
+    </div>
+
+    <h2> Examples: </h2>
 
     <div class='test' name='One'>
-
-      
-      <h3> Simple example. </h3>
+      <h3> Touch enabled example. </h3>
       
       <div data-ur-set='carousel' data-ur-carousel-component='view_container'>
         <span data-ur-carousel-component='count'> -- count -- </span>
