--- a/tests/select_buttons.html
+++ b/tests/select_buttons.html
@@ -13,39 +13,18 @@
 
 <hr>
 
-<p>
-    This widget allows you to bind increment/decrement buttons to trigger
-  the appropriate changes on a &lt;select&gt; element.
-</p>
-
-<h2> How To: </h2>
+<h2> Description: </h2>
 
 <div class='description'>
-  <ol>
-    <li> Group the select-buttons components. (Add link here)
-    <li> Set the 'data-ur-select-buttons-component' attribute to
-  'select' on the target &lt;select&gt; tag.</li>
-  <li> Set the 'data-ur-select-buttons-component' attribute to
-  'increment' on the increment button. </li>
-  <li> Set the 'data-ur-select-buttons-component' attribute to
-  'decrement' on the decrement button. </li>
-  </ol>
-
   <p>
-    Note : When there are no more options to increment/decrement the
-    button will have the 'data-ur-state' attribute set to
-    'disabled'. Otherwise, it will have the 'enabled' value. It is
-    recommended that the decrement button have this attribute set to
-    'disabled' in the page source.
+  This widget allows you to bind increment/decrement buttons to trigger
+  the appropriate changes on a &lt;select&gt; element.
   </p>
 </div>
 
-<h2> Test: </h2>
+<h2> Example: </h2>
 
 <div class='test' name='One'>
-
-  
-  <h3>Simple example.</h3>
   
   <div data-ur-set='select-buttons'>
     <select data-ur-select-buttons-component='select'>
