Refactored widgets -- now they initialize onDOMContentLoaded (except for carousel, which cannot because of its implementation - it initializes onload instead). Also made the initializers available in the global scope so that if you want to re-initialize you can (next step is specifying a fragment to initialize -- then this will be useful).

--- a/examples/toggler.html
+++ b/examples/toggler.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title> Toggle Unit Tests</title>
-    <script src="../build/src/uranium.js"></script>
+    <script src="../build/src/uranium-pretty.js"></script>
     <link rel="stylesheet" type='text/css' href='css/test.css' />
     <link rel="stylesheet" type='text/css' href='css/toggler.css' />
   </head>
