--- a/examples/toggler.html
+++ b/examples/toggler.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <title> Toggle Unit Tests</title>
-    <script src="../build/src/uranium-pretty.js"></script>
+<!--    <script src="../build/src/uranium-pretty.js"></script> -->
+    <script src="../lib/external/xui-2.0.0.js"></script>
+    <script src="../lib/uranium_mixins.js"></script>
+    <script src="../lib/toggler.js"></script>
     <link rel="stylesheet" type='text/css' href='css/test.css' />
     <link rel="stylesheet" type='text/css' href='css/toggler.css' />
   </head>
