Forgot to put the toggler test back to the way I found it

--- a/examples/toggler.html
+++ b/examples/toggler.html
@@ -2,11 +2,8 @@
 <html>
   <head>
     <title> Toggle Unit Tests</title>
-<!--    <script src="../build/src/uranium-pretty.js"></script> -->
-    <script src="../lib/external/xui-2.0.0.js"></script>
-    <script src="../lib/uranium_mixins.js"></script>
-    <script src="../lib/toggler.js"></script>
-    <link rel="stylesheet" type='text/css' href='css/test.css' />
+   <script src="../build/src/uranium-pretty.js"></script>
+   <link rel="stylesheet" type='text/css' href='css/test.css' />
     <link rel="stylesheet" type='text/css' href='css/toggler.css' />
   </head>
 
