Fast swiping bug far from gone (it appeared fixed because i was using similar images in the carousel -- so it fooled the eyes). Fixed the destination index now w fast swiping -- need to fix the tracking through. This is a breaking change ... and will be till the bug is vanquished

--- a/examples/carousel.html
+++ b/examples/carousel.html
@@ -17,7 +17,7 @@
   </head>
   
   <body suite='Carousel'>
-
+<!--
     <h1> Carousels </h1>
 
     <hr>
@@ -31,10 +31,11 @@
     </div>
 
     <h2> Examples: </h2>
-
+-->
     <div class='test' name='One'>
+<!--
       <h3> Touch enabled example. </h3>
-
+-->
       <div id='jump'> Jump to 5th item </div>
       
       <div data-ur-set='carousel'
@@ -47,14 +48,14 @@
           Next
         </div>
         <div data-ur-carousel-component='scroll_container'>
-          <img data-ur-carousel-component='item' src='images/ci-1.png' />
-          <img data-ur-carousel-component='item' src='images/ci-2.png' />
-          <img data-ur-carousel-component='item' src='images/ci-1.png' />
-          <img data-ur-carousel-component='item' src='images/ci-2.png' />
-          <img data-ur-carousel-component='item' src='images/ci-1.png' />
-          <img data-ur-carousel-component='item' src='images/ci-2.png' />
-          <img data-ur-carousel-component='item' src='images/ci-1.png' />
-          <img data-ur-carousel-component='item' src='images/ci-2.png' />
+          <img data-ur-carousel-component='item' src='images/sample1.png' />
+          <img data-ur-carousel-component='item' src='images/sample2.png' />
+          <img data-ur-carousel-component='item' src='images/sample3.png' />
+          <img data-ur-carousel-component='item' src='images/sample4.png' />
+          <img data-ur-carousel-component='item' src='images/sample5.png' />
+          <img data-ur-carousel-component='item' src='images/sample6.png' />
+          <img data-ur-carousel-component='item' src='images/sample7.png' />
+          <img data-ur-carousel-component='item' src='images/sample8.png' />
         </div>       
       </div>
     </div>
