Carousel -- do nothing if its a click -- then links work without looking janky

--- a/examples/carousel.html
+++ b/examples/carousel.html
@@ -49,7 +49,7 @@
         </div>
         <div data-ur-carousel-component='scroll_container'>
           <img data-ur-carousel-component='item' src='images/sample1.png' />
-          <img data-ur-carousel-component='item' src='images/sample2.png' />
+          <a href='http://www.google.com/search?sourceid=chrome&ie=UTF-8&q=2'> <img data-ur-carousel-component='item' src='images/sample2.png' /> </a>
           <img data-ur-carousel-component='item' src='images/sample3.png' />
           <img data-ur-carousel-component='item' src='images/sample4.png' />
           <img data-ur-carousel-component='item' src='images/sample5.png' />
