Map : Got basic map creation working

--- a/examples/map.html
+++ b/examples/map.html
@@ -10,7 +10,7 @@
   <script src="../lib/map.js"></script>
 
    <link rel="stylesheet" type='text/css' href='css/test.css' />
-    <link rel="stylesheet" type='text/css' href='css/tabs.css' />
+    <link rel="stylesheet" type='text/css' href='css/map.css' />
   </head>
 
   <body suite='Maps'>
