--- a/examples/geocode/_select_elements.html
+++ b/examples/geocode/_select_elements.html
@@ -5,12 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
   <title>Geocode</title>
-  <!-- <script src="../build/src/uranium.js"></script> -->
-  <script type="text/javascript" src="../lib/external/xui-2.0.0.js"></script>
-  <script type="text/javascript" src="../lib/uranium_mixins.js"></script>
-  <script type="text/javascript" src="../lib/geolocation.js"></script>
-  <link rel="stylesheet" type='text/css' href='css/test.css' />
-  <link rel="stylesheet" type='text/css' href='css/geocode.css' />
+  <script src="../../build/src/uranium.js"></script>
+  <link rel="stylesheet" type='text/css' href='../css/test.css' />
+  <link rel="stylesheet" type='text/css' href='../css/geocode.css' />
 </head>
 
 <body>
