--- a/examples/map.html
+++ b/examples/map.html
@@ -32,7 +32,8 @@
       <h3> Simple</h3>
 
       <div data-ur-set='map' data-ur-map-api-key=''>
-        <div data-ur-map-component='user_location' data-ur-state='enabled'></div>        
+        <div data-ur-map-component='user_location'
+        data-ur-state='enabled'> Use My Location! </div>        
         
         <div data-ur-map-component='canvas'></div>
 
