Added testing note

--- a/examples/map.html
+++ b/examples/map.html
@@ -19,6 +19,10 @@
 
     <hr>
 
+    <p> Note: If you're testing this locally (off of a file in your
+    browser) -- then geolocation will not work. Put it in your dropbox
+    to play w these features </p>
+
     <h2> Description: </h2>
     <div class='description'>
       <p>
