Started to add custom icon feature

--- a/examples/map.html
+++ b/examples/map.html
@@ -35,9 +35,13 @@
 
       <h3> Simple</h3>
 
-      <div data-ur-set='map' data-ur-map-api-key=''>
+      <div data-ur-set='map'>
         <div data-ur-map-component='user_location'
         data-ur-state='enabled'> Use My Location! </div>        
+
+        <div data-ur-map-component='icon'
+        url='http://dl.dropbox.com/u/3940085/moovweb/Core/Ur/examples/images/map-icon-1.jpeg'><img
+        src='http://dl.dropbox.com/u/3940085/moovweb/Core/Ur/examples/images/map-icon-1.jpeg'/></div>
         
         <div data-ur-map-component='canvas'></div>
 
