--- a/examples/carousel.html
+++ b/examples/carousel.html
@@ -60,6 +60,35 @@
       </div>
     </div>
 
+    <div class='test' name='OnePointFive'>
+
+      <h3> Touch enabled example. </h3>
+
+      <p> This carousel allows for vertical scrolling.  </p>
+      
+      <div data-ur-set='carousel'
+        data-ur-carousel-component='view_container'
+        data-ur-id='MyFirstKindaCarousel' data-ur-vertical-scroll='enabled'>
+        <span data-ur-carousel-component='count'> -- count -- </span>
+        <div data-ur-carousel-component='button'data-ur-carousel-button-type='prev' >
+          Prev
+        </div>
+        <div data-ur-carousel-component='button' data-ur-carousel-button-type='next' >
+          Next
+        </div>
+        <div data-ur-carousel-component='scroll_container'>
+          <img data-ur-carousel-component='item' src='images/sample1.png' />
+          <a href='http://www.google.com/search?sourceid=chrome&ie=UTF-8&q=2'> <img data-ur-carousel-component='item' src='images/sample2.png' /> </a>
+          <img data-ur-carousel-component='item' src='images/sample3.png' />
+          <img data-ur-carousel-component='item' src='images/sample4.png' />
+          <img data-ur-carousel-component='item' src='images/sample5.png' />
+          <img data-ur-carousel-component='item' src='images/sample6.png' />
+          <img data-ur-carousel-component='item' src='images/sample7.png' />
+          <img data-ur-carousel-component='item' src='images/sample8.png' />
+        </div>       
+      </div>
+    </div>
+    
 
     <div class='test' name='Two'>
       <h3> No-touch (just buttons) example. </h3>
