Tweaked syntax for custom map icons (added width/height parameters). Also rebuilt the bundles

--- a/examples/maps/advanced.html
+++ b/examples/maps/advanced.html
@@ -39,7 +39,7 @@
         <div data-ur-map-component='user_location'
         data-ur-state='enabled'> Use My Location! </div>        
 
-        <div data-ur-map-component='icon' url='http://dl.dropbox.com/u/3940085/moovweb/Core/Ur/examples/images/map-icon-1.jpeg'>
+        <div data-ur-map-component='icon' data-ur-url='http://dl.dropbox.com/u/3940085/moovweb/Core/Ur/examples/images/map-icon-1.jpeg'>
 
           <img src='http://dl.dropbox.com/u/3940085/moovweb/Core/Ur/examples/images/map-icon-1.jpeg'/>
           <!-- for preloading the image! -->
