--- a/examples/maps/late_load.html
+++ b/examples/maps/late_load.html
@@ -51,7 +51,7 @@
         data-ur-state='enabled'> Use My Location! </div>        
 
         <div data-ur-map-component='icon'
-        url='http://dl.dropbox.com/u/3940085/moovweb/Core/Ur/examples/images/map-icon-1.jpeg'><img
+        data-ur-url='http://dl.dropbox.com/u/3940085/moovweb/Core/Ur/examples/images/map-icon-1.jpeg'><img
         src='http://dl.dropbox.com/u/3940085/moovweb/Core/Ur/examples/images/map-icon-1.jpeg'/></div>
         
         <div data-ur-map-component='canvas'></div>
