Compiled Font Resizer into the Uranium bundle and added the example page to the main example index.

--- a/examples/font_resizer.html
+++ b/examples/font_resizer.html
@@ -1,9 +1,7 @@
 <html>
 <head>
   <title>Font Resizer Unit Test</title>
-  <script src="../lib/external/xui-2.0.0.js"></script>
-  <script src="../lib/uranium_mixins.js"></script>
-  <script src="../lib/font_resizer.js"></script>
+  <script src="../build/src/uranium.js"></script>
 </head>
 
 <body suite="FontResizer">
