Adding a toggle thing to a main page

--- a/examples/main.html
+++ b/examples/main.html
@@ -1,6 +1,8 @@
 <html>
 <body>
-  <h1> Tests / Examples </h1>
+  <h1>Uranium</h1>
+  <h2> Introduction</h2>
+  <h2> Examples </h2>
 
   <ul>
     <li> <a href="toggler.html"> Toggler </a> </li>
