--- a/examples/uranium_introduction.html
+++ b/examples/uranium_introduction.html
@@ -33,6 +33,15 @@
         </div>
       </div>
     </div>
-    
+    <div id="detail">
+      <p>More detail on the widgets:</p>
+      <ul>
+        <li> <a href="toggler.html"> Toggler </a> </li>
+        <li> <a href="select_list.html"> Select List </a> </li>
+        <li> <a href="select_buttons.html"> Select Buttons </a> </li>
+        <li> <a href="zoom_preview.html"> Zoom Preview </a> </li>
+        <li> <a href="carousel.html"> Carousel </a> </li>
+      </ul>
+    </div>
   </body>
 </html>
