More explanation for the togglers

--- a/examples/tabs.html
+++ b/examples/tabs.html
@@ -11,19 +11,16 @@
     <link rel="stylesheet" type='text/css' href='css/tabs.css' />
   </head>
 
-  <body suite='Togglers'>
+  <body suite='Tabs'>
 
-    <h1> Togglers </h1>
+    <h1> Tabs </h1>
 
     <hr>
 
     <h2> Description: </h2>
     <div class='description'>
       <p>
-        Toggler is a widget that has two components -- a button, and a
-      set of contents. When you click the button, the button and
-    content 
-      states are toggled.
+        Tabs are kind of like togglers, but allow a state to be defined.
       </p>
     </div>
 
