Adding explanation about tabs

--- a/examples/uranium_introduction.html
+++ b/examples/uranium_introduction.html
@@ -147,6 +147,7 @@
       <p>More detail on the widgets:</p>
       <ul>
         <li> <a href="toggler.html"> Toggler </a> </li>
+        <li> <a href="tabs.html"> 
         <li> <a href="select_list.html"> Select List </a> </li>
         <li> <a href="select_buttons.html"> Select Buttons </a> </li>
         <li> <a href="zoom_preview.html"> Zoom Preview </a> </li>
