--- a/examples/toggler.html
+++ b/examples/toggler.html
@@ -68,7 +68,8 @@
       </p>
       <p>
         We wrap the whole toggler in a div with the data-ur-set attribute set
-        as "toggler".
+        as "toggler". (There is an alternative to using a "set" div - using IDs. Check
+        it out <a href="#id_tag">here</a>.)
       </p>
       <p class="code">
         &lt;div data-ur-set="toggler"><br/>
@@ -157,7 +158,7 @@
 
     <div class='test' name='UniqueIDs'>
 
-      <h3> Flat -- Single button / single content element</h3>
+      <h3><a name="id_tag"></a>Simple Example - with ID</h3>
       
       <div class='description'>
 
