--- a/examples/uranium_introduction.html
+++ b/examples/uranium_introduction.html
@@ -147,11 +147,11 @@
       <p>More detail on the widgets:</p>
       <ul>
         <li> <a href="toggler.html"> Toggler </a> </li>
-        <li> <a href="tabs.html"> 
+        <li> <a href="tabs.html"> Tabs </a> </li>
+        <li> <a href="carousel.html"> Carousel </a> </li>
         <li> <a href="select_list.html"> Select List </a> </li>
         <li> <a href="select_buttons.html"> Select Buttons </a> </li>
         <li> <a href="zoom_preview.html"> Zoom Preview </a> </li>
-        <li> <a href="carousel.html"> Carousel </a> </li>
         <li> <a href="font_resizer.html"> Font Resizer </a> </li>
       </ul>
     </div>
