--- a/examples/font_resizer.html
+++ b/examples/font_resizer.html
@@ -15,8 +15,9 @@
   <div class="description">
     <p>This widget allows us to change the font size of a specified page element.</p>
     <p>To use this widget, we need to use a couple of attributes. We can use the set method (i.e.
-      grouping the whole widget in a div with the attribute data-ur-set) or the id method (i.e. giving
-      every component of the widget a data-ur-id with an identical value).</p>
+      grouping all of the widget components in a single div with the attribute data-ur-set) or the id method (i.e. giving
+      each component of the widget a data-ur-id with an identical value, which doesn't require them to
+      be grouped inside a single wrapper).</p>
     <p>Along with the set/id, we need to use the following:</p>
     <ul>
       <li>data-ur-font-resizer-component="increase" - this is used to mark the increase button (e.g. [+]).</li>
@@ -42,5 +43,16 @@
     <span data-ur-id="foo" data-ur-font-resizer-component="label"></span>
     <span data-ur-id="foo" data-ur-font-resizer-component="decrease">[-]</span>
     <p data-ur-id="foo" data-ur-font-resizer-component="content">To be or not to be, that is the question. Whether 'tis nobler in the mind to endure the slings and arrows of outrageous fortune etc etc.</p>
+  </div>
+  
+  <h2>An Advanced Example (a self-resizing resizer):</h2>
+  <div class="test" name="Three">
+    <div data-ur-set="font-resizer" data-ur-font-resizer-component="content">
+      <span data-ur-font-resizer-component="increase">[+]</span>
+      <span data-ur-font-resizer-component="label"></span>
+      <span data-ur-font-resizer-component="decrease">[-]</span>
+      <p>To be or not to be, that is the question. Whether 'tis nobler in the mind to endure the slings and arrows of outrageous fortune etc etc.</p>
+    </div>
+  </div>
 </body>
 </html>
