--- a/examples/font_resizer.html
+++ b/examples/font_resizer.html
@@ -80,13 +80,15 @@
     </div>
   </div>
   
-  <h2>A Super-Advanced Example (using the secret "invert" attribute!):</h2>
-  <div class="test">
-    <div data-ur-set="font-resizer">
-      <span data-ur-font-resizer-component="increase">[+]</span>
-      <span data-ur-font-resizer-component="label"></span>
-      <span data-ur-font-resizer-component="decrease">[-]</span>
-      <p data-ur-font-resizer-component="content" data-ur-font-resizer-invert="Bam!">To be or not to be, that is the question. Whether 'tis nobler in the mind to endure the slings and arrows of outrageous fortune etc etc.</p>
+  <div style="display:none">
+    <h2>A Super-Advanced Example (using the secret "invert" attribute!):</h2>
+    <div class="test">
+      <div data-ur-set="font-resizer">
+        <span data-ur-font-resizer-component="increase">[+]</span>
+        <span data-ur-font-resizer-component="label"></span>
+        <span data-ur-font-resizer-component="decrease">[-]</span>
+        <p data-ur-font-resizer-component="content" data-ur-font-resizer-delta="10" data-ur-font-resizer-invert="Bam!">To be or not to be, that is the question. Whether 'tis nobler in the mind to endure the slings and arrows of outrageous fortune etc etc.</p>
+      </div>
     </div>
   </div>
 </body>
