--- a/examples/font_resizer.html
+++ b/examples/font_resizer.html
@@ -34,7 +34,7 @@
       <li>data-ur-font-resizer-min - defaults to "100"</li>
       <li>data-ur-font-resizer-max - defaults to "200"</li>
       <li>data-ur-font-resizer-size - defaults to min</li>
-      <li>data-ur-font-resizer-delta - detaults to "20"</li>
+      <li>data-ur-font-resizer-delta - defaults to "20"</li>
     </ul>
   </div>
   
