--- a/examples/font_resizer.html
+++ b/examples/font_resizer.html
@@ -1,9 +1,7 @@
 <html>
 <head>
   <title>Font Resizer Unit Test</title>
-  <script src="../lib/external/xui-2.0.0.js"></script>
-  <script src="../lib/uranium_mixins.js"></script>
-  <script src="../lib/font_resizer.js"></script>
+  <script src="../build/src/uranium.js"></script>
   <link rel="stylesheet" type='text/css' href='css/test.css' />
     <link rel="stylesheet" type='text/css' href='css/resizer.css' />
 </head>
