--- a/examples/select_list.html
+++ b/examples/select_list.html
@@ -5,6 +5,7 @@
     <script src="../build/src/uranium.js"></script>
 <link rel="stylesheet" type='text/css' href='css/test.css' />
 <link rel="stylesheet" type='text/css' href='css/select_lists.css' />
+<link rel="stylesheet" type='text/css' href='css/tabs.css' />
 </head>
 
 <body suite='SelectLists'>
@@ -29,56 +30,39 @@
   <p>
   A &lt;ul&gt; is the trigger list in this case.
   </p>
-  <div data-ur-set='select-list'>
-    <select data-ur-select-list-component='select'>
-      <option selected='true' value='-1'> -None- </option>
-      <option value='SKU-XS'> XS </option>
-      <option value='SKU-S'> S </option>
-      <option value='SKU-M'> M </option>
-      <option value='SKU-L'> L </option>
-    </select>
+  <div id="select_list_demonstration" data-ur-set="tabs">
+    <h3 data-ur-tabs-component='button' data-ur-tab-id="widget" data-ur-state='enabled'>Widget</h3>
+
+    <h3 data-ur-tabs-component='button' data-ur-tab-id="html"> HTML</h3>
     
+    <div data-ur-tabs-component="content" data-ur-tab-id="widget" data-ur-state="enabled">
+      <div data-ur-set='select-list'>
+        <select data-ur-select-list-component='select'>
+          <option selected='true' value='-1'> -None- </option>
+          <option value='SKU-XS'> XS </option>
+          <option value='SKU-S'> S </option>
+          <option value='SKU-M'> M </option>
+          <option value='SKU-L'> L </option>
+        </select>
+  
 
-    <ul data-ur-select-list-component='content'>
-      <li value='-1'> -None- </li>
-      <li value='SKU-XS'> XS </li>
-      <li value='SKU-S'> S </li>
-      <li value='SKU-M'> M </li>
-      <li value='SKU-L'> L </li>
-    </ul>
-  </div>
- 
+        <ul data-ur-select-list-component='content'>
+          <li value='-1'> -None- </li>
+          <li value='SKU-XS'> XS </li>
+          <li value='SKU-S'> S </li>
+          <li value='SKU-M'> M </li>
+          <li value='SKU-L'> L </li>
+        </ul>
+      </div>
+    </div>
+    <div data-ur-tabs-component="content" data-ur-tab-id="html">
+      HTML GOES HERE
+    </div>
 </div>
 
-<div class='test' name='Two'>
-
-  
-  <h3> Subset example </h3>
-  <p>
-     A &lt;div&gt; is the trigger list in this case. Notice how some
-    options were omitted from the trigger list. This is a valid way to
-    construct the trigger list.
-  </p>
-  
-  <select data-ur-select-list-component='select' data-ur-id='MyUIDSelectList'>
-    <option selected='true' value='-1'> -None- </option>
-    <option value='SKU-XS'> XS </option>
-    <option value='SKU-S'> S </option>
-    <option value='SKU-M'> M </option>
-    <option value='SKU-L'> L </option>
-  </select>
-
-
-  <div data-ur-select-list-component='content' data-ur-id='MyUIDSelectList'>
-    <span value='SKU-XS'> XS </span>
-    <span value='SKU-S'> S </span>
-    <span value='SKU-M'> M </span>
-    <span value='SKU-L'> L </span>
-  </div>
-
- 
+<div>
+  <p>More examples of selecting lists can be found <a href="selecting_list_examples.html">here</a>.</p>
 </div>
-
 
 </body>
 </html>
