Adding the preceding into a contents style file

--- a/examples/uranium_introduction.html
+++ b/examples/uranium_introduction.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" type='text/css' href='css/intro.css' />
+    <link rel="stylesheet" type='text/css' href='css/test.css' />
     <script src="../build/src/uranium-pretty.js"></script>
   </head>
   <body>
