--- a/examples/example_list.html
+++ b/examples/example_list.html
@@ -13,6 +13,8 @@
         <li> <a href="toggler_examples.html"> Toggler </a> </li>
         <li> <a href="tabs_examples.html"> Tabs </a> </li>
         <li> <a href="carousel_examples.html"> Carousel </a> </li>
+        <li> <a href="select_list_examples.html"> Select Lists </a> </li>
+        <li> <a href="zoom_preview_examples.html"> Zoom Preview </a> </li>
       </ul>
     </div>
   </body>
