--- a/examples/tutorials.html
+++ b/examples/tutorials.html
@@ -4,7 +4,9 @@
     <title>Tutorials</title>
     <script src="../build/src/uranium-pretty.js"></script>
     <link rel="stylesheet" type='text/css' href='css/test.css' />
+    <link rel="stylesheet" type='text/css' href='css/tutorial.css' />
   </head>
+  
   <body>
     <h1>Tutorials</h1>
     <div id="tutorial_introduction">
@@ -16,125 +18,134 @@
       As such, here we're going to go over two examples of how to use widgets. Firstly, we'll look
       at the toggler. Then we'll look at ________.
     </div>
-    <div class="tutorial" id="toggler_tutorial">
-      <h2>Tutorial 1: The Toggler</h2>
-      <p>We're going to start by This is what we're going to build:</p>
-      <div data-ur-set='toggler'>
-        <div data-ur-toggler-component='button'>
-          Clothings
+    <div class="tutorial" id="toggler_tutorial" data-ur-set="tabs" data-ur-closeable='true'>
+      <h2 data-ur-tabs-component="button" data-ur-tab-id='first_tutorial'>Click for Tutorial 1: The Toggler</h2>
+      <div data-ur-tabs-component="content" data-ur-tab-id='first_tutorial'>
+        <p>We're going to start by This is what we're going to build:</p>
+        <div data-ur-set='toggler'>
+          <div data-ur-toggler-component='button'>
+            Clothings
+          </div>
+    
+          <ul data-ur-toggler-component='content'>
+            <li> Hat </li>
+            <li> Socks </li>
+            <li> Shoes </li>
+            <li> Gloves </li>
+            <li> Shirts </li>
+          </ul>
         </div>
-        
-        <ul data-ur-toggler-component='content'>
-          <li> Hat </li>
-          <li> Socks </li>
-          <li> Shoes </li>
-          <li> Gloves </li>
-          <li> Shirts </li>
-        </ul>
+        <p>
+          Let's start with the basics: we need a div for "Clothings" and then an unordered list with
+          the items in it.
+        </p>
+        <p class="code">
+          &lt;div><br/>
+          &emsp;&emsp;Clothings<br/>
+          &lt;div><br/>
+          &lt;ul><br/>
+          &emsp;&emsp;&lt;li> Hat &lt;/li><br/>
+          &emsp;&emsp;&lt;li> Socks &lt;/li><br/>
+          &emsp;&emsp;&lt;li> Shoes &lt;/li><br/>
+          &emsp;&emsp;&lt;li> Gloves &lt;/li><br/>
+          &emsp;&emsp;&lt;li> Shirts &lt;/li><br/>
+          &lt;/ul>
+        </p>
+        <p>
+          We wrap the whole toggler in a div with the data-ur-set attribute set
+          as "toggler".
+        </p>
+        <p class="code">
+          &lt;div data-ur-set="toggler"><br/>
+          &emsp;&emsp;&lt;div><br/>
+          &emsp;&emsp;&emsp;&emsp;Clothings<br/>
+          &emsp;&emsp;&lt;div><br/>
+          &emsp;&emsp;&lt;ul><br/>
+          &emsp;&emsp;&emsp;&emsp;&lt;li> Hat &lt;/li><br/>
+          &emsp;&emsp;&emsp;&emsp;&lt;li> Socks &lt;/li><br/>
+          &emsp;&emsp;&emsp;&emsp;&lt;li> Shoes &lt;/li><br/>
+          &emsp;&emsp;&emsp;&emsp;&lt;li> Gloves &lt;/li><br/>
+          &emsp;&emsp;&emsp;&emsp;&lt;li> Shirts &lt;/li><br/>
+          &emsp;&emsp;&lt;/ul><br/>
+          &lt;/div>
+        </p>
+        <p>
+          Next, we specify the button. We give the button the attribute "data-ur-toggler-component" and the
+          value "button". (Want to know why the attributes are quite long? Click <a href="./attributes_explanation.html">here</a>.)
+        </p>
+        <p class="code">
+          &lt;div data-ur-set="toggler"><br/>
+          &emsp;&emsp;&lt;div data-ur-toggler-component="button"><br/>
+          &emsp;&emsp;&emsp;&emsp;Clothings<br/>
+          &emsp;&emsp;&lt;div><br/>
+          &emsp;&emsp;&lt;ul><br/>
+          &emsp;&emsp;&emsp;&emsp;&lt;li> Hat &lt;/li><br/>
+          &emsp;&emsp;&emsp;&emsp;&lt;li> Socks &lt;/li><br/>
+          &emsp;&emsp;&emsp;&emsp;&lt;li> Shoes &lt;/li><br/>
+          &emsp;&emsp;&emsp;&emsp;&lt;li> Gloves &lt;/li><br/>
+          &emsp;&emsp;&emsp;&emsp;&lt;li> Shirts &lt;/li><br/>
+          &emsp;&emsp;&lt;/ul><br/>
+          &lt;/div>
+        </p>
+        <p>
+          The final thing we need to do to the HTML is specify the content aspect of the toggler. The content
+          in this case is the unordered list that we want to appear when the button is clicked. We give it the
+          attribute data-ur-toggler-component (the same as for the button, if you remember) - but this time we
+          use the value "content".
+        </p>
+        <p class="code">
+          &lt;div data-ur-set="toggler"><br/>
+          &emsp;&emsp;&lt;div data-ur-toggler-component="button"><br/>
+          &emsp;&emsp;&emsp;&emsp;Clothings<br/>
+          &emsp;&emsp;&lt;div><br/>
+          &emsp;&emsp;&lt;ul data-ur-toggler-component="content"><br/>
+          &emsp;&emsp;&emsp;&emsp;&lt;li> Hat &lt;/li><br/>
+          &emsp;&emsp;&emsp;&emsp;&lt;li> Socks &lt;/li><br/>
+          &emsp;&emsp;&emsp;&emsp;&lt;li> Shoes &lt;/li><br/>
+          &emsp;&emsp;&emsp;&emsp;&lt;li> Gloves &lt;/li><br/>
+          &emsp;&emsp;&emsp;&emsp;&lt;li> Shirts &lt;/li><br/>
+          &emsp;&emsp;&lt;/ul><br/>
+          &lt;/div>
+        </p>
+        <p>That's all we need to do with regards to HTML. However, if you play around with your widget 
+          as it is, you'll notice not much is happening. This is because we haven't changed the CSS yet. The
+          javascript is doing its job, though! Let's see how.
+        </p>
+        <p>
+          Right-click on your widget and "inspect element". You'll see the button and the content divs have
+          an extra attribute - data-ur-state. This is, by default, set to "disabled".
+        </p>
+        <img src="images/disabled.png">
+        <p>
+          When the button is clicked, it changes to "enabled". 
+        </p>
+        <img src="images/enabled.png">
+        <p>
+          So, what we need to do is change the CSS of the page. It needs to be set so that
+          the content does not display when data-ur-state="disabled", but to display when 
+          data-ur-state="enabled".
+        </p>
+        <p class="code">
+          *[data-ur-toggler-component='content'] {<br/>
+          &emsp;&emsp;display: none;<br/>
+          }<br/>
+          *[data-ur-toggler-component='content'][data-ur-state='enabled'] {<br/>
+          &emsp;&emsp;display: block;<br/>
+          }
+        </p>
+        <p>
+          (This is actually what we call "lazy" CSS styling. What we're doing is only defining what
+          happens when the data-ur-state is enabled - we don't say anything about its "disabled" state.)
+        </p>
+        <p>The widgets within Uranium are pretty much only limited by your CSS imagination.
+        </p>
       </div>
-      <p>
-        Let's start with the basics: we need a div for "Clothings" and then an unordered list with
-        the items in it.
-      </p>
-      <p class="code">
-        &lt;div><br/>
-        &emsp;&emsp;Clothings<br/>
-        &lt;div><br/>
-        &lt;ul><br/>
-        &emsp;&emsp;&lt;li> Hat &lt;/li><br/>
-        &emsp;&emsp;&lt;li> Socks &lt;/li><br/>
-        &emsp;&emsp;&lt;li> Shoes &lt;/li><br/>
-        &emsp;&emsp;&lt;li> Gloves &lt;/li><br/>
-        &emsp;&emsp;&lt;li> Shirts &lt;/li><br/>
-        &lt;/ul>
-      </p>
-      <p>
-        We wrap the whole toggler in a div with the data-ur-set attribute set
-        as "toggler".
-      </p>
-      <p class="code">
-        &lt;div data-ur-set="toggler"><br/>
-        &emsp;&emsp;&lt;div><br/>
-        &emsp;&emsp;&emsp;&emsp;Clothings<br/>
-        &emsp;&emsp;&lt;div><br/>
-        &emsp;&emsp;&lt;ul><br/>
-        &emsp;&emsp;&emsp;&emsp;&lt;li> Hat &lt;/li><br/>
-        &emsp;&emsp;&emsp;&emsp;&lt;li> Socks &lt;/li><br/>
-        &emsp;&emsp;&emsp;&emsp;&lt;li> Shoes &lt;/li><br/>
-        &emsp;&emsp;&emsp;&emsp;&lt;li> Gloves &lt;/li><br/>
-        &emsp;&emsp;&emsp;&emsp;&lt;li> Shirts &lt;/li><br/>
-        &emsp;&emsp;&lt;/ul><br/>
-        &lt;/div>
-      </p>
-      <p>
-        Next, we specify the button. We give the button the attribute "data-ur-toggler-component" and the
-        value "button". (Want to know why the attributes are quite long? Click <a href="./attributes_explanation.html">here</a>.)
-      </p>
-      <p class="code">
-        &lt;div data-ur-set="toggler"><br/>
-        &emsp;&emsp;&lt;div data-ur-toggler-component="button"><br/>
-        &emsp;&emsp;&emsp;&emsp;Clothings<br/>
-        &emsp;&emsp;&lt;div><br/>
-        &emsp;&emsp;&lt;ul><br/>
-        &emsp;&emsp;&emsp;&emsp;&lt;li> Hat &lt;/li><br/>
-        &emsp;&emsp;&emsp;&emsp;&lt;li> Socks &lt;/li><br/>
-        &emsp;&emsp;&emsp;&emsp;&lt;li> Shoes &lt;/li><br/>
-        &emsp;&emsp;&emsp;&emsp;&lt;li> Gloves &lt;/li><br/>
-        &emsp;&emsp;&emsp;&emsp;&lt;li> Shirts &lt;/li><br/>
-        &emsp;&emsp;&lt;/ul><br/>
-        &lt;/div>
-      </p>
-      <p>
-        The final thing we need to do to the HTML is specify the content aspect of the toggler. The content
-        in this case is the unordered list that we want to appear when the button is clicked. We give it the
-        attribute data-ur-toggler-component (the same as for the button, if you remember) - but this time we
-        use the value "content".
-      </p>
-      <p class="code">
-        &lt;div data-ur-set="toggler"><br/>
-        &emsp;&emsp;&lt;div data-ur-toggler-component="button"><br/>
-        &emsp;&emsp;&emsp;&emsp;Clothings<br/>
-        &emsp;&emsp;&lt;div><br/>
-        &emsp;&emsp;&lt;ul data-ur-toggler-component="content"><br/>
-        &emsp;&emsp;&emsp;&emsp;&lt;li> Hat &lt;/li><br/>
-        &emsp;&emsp;&emsp;&emsp;&lt;li> Socks &lt;/li><br/>
-        &emsp;&emsp;&emsp;&emsp;&lt;li> Shoes &lt;/li><br/>
-        &emsp;&emsp;&emsp;&emsp;&lt;li> Gloves &lt;/li><br/>
-        &emsp;&emsp;&emsp;&emsp;&lt;li> Shirts &lt;/li><br/>
-        &emsp;&emsp;&lt;/ul><br/>
-        &lt;/div>
-      </p>
-      <p>That's all we need to do with regards to HTML. However, if you play around with your widget 
-        as it is, you'll notice not much is happening. This is because we haven't changed the CSS yet. The
-        javascript is doing its job, though! Let's see how.
-      </p>
-      <p>
-        Right-click on your widget and "inspect element". You'll see the button and the content divs have
-        an extra attribute - data-ur-state. This is, by default, set to "disabled".
-      </p>
-      <img src="images/disabled.png">
-      <p>
-        When the button is clicked, it changes to "enabled". 
-      </p>
-      <img src="images/enabled.png">
-      <p>
-        So, what we need to do is change the CSS of the page. It needs to be set so that
-        the content does not display when data-ur-state="disabled", but to display when 
-        data-ur-state="enabled".
-      </p>
-      <p class="code">
-        *[data-ur-toggler-component='content'] {<br/>
-        &emsp;&emsp;display: none;<br/>
-        }<br/>
-        *[data-ur-toggler-component='content'][data-ur-state='enabled'] {<br/>
-        &emsp;&emsp;display: block;<br/>
-        }
-      </p>
-      <p>
-        (This is actually what we call "lazy" CSS styling. What we're doing is only defining what
-        happens when the data-ur-state is enabled - we don't say anything about its "disabled" state.)
-      </p>
-      <p>The widgets within Uranium are pretty much only limited by your CSS imagination.
+    </div>
+    <div class="tutorial" id="toggler_tutorial" data-ur-set="tabs" data-ur-closeable='true'>
+      <h2 data-ur-tabs-component="button" data-ur-tab-id='second_tutorial'>Click for Tutorial 2: The Toggler</h2>
+      <div data-ur-tabs-component="content" data-ur-tab-id='second_tutorial'>
+        TUTORIAL HERE
+      </div>
     </div>
   <h2> Example with IDs</h2>
   <p class="code">
