It helps if you use the right tags

--- a/examples/font_resizer.html
+++ b/examples/font_resizer.html
@@ -56,12 +56,14 @@
       </div>
     </div>
     <div data-ur-tabs-component="content" data-ur-tab-id="html">
-      &li;div data-ur-set="font-resizer"></br>
-        &emsp;&emsp;&li;span data-ur-font-resizer-component="increase">[+]&li;/span></br>
-        &emsp;&emsp;&li;span data-ur-font-resizer-component="label">&li;/span></br>
-        &emsp;&emsp;&li;span data-ur-font-resizer-component="decrease">[-]&li;/span></br>
-        &emsp;&emsp;&li;p data-ur-font-resizer-component="content">To be or not to be, that is the question. Whether 'tis nobler in the mind to endure the slings and arrows of outrageous fortune etc etc.&li;/p></br>
-      &li;/div>
+      <p class="code">
+      &lt;div data-ur-set="font-resizer"></br>
+        &emsp;&emsp;&lt;span data-ur-font-resizer-component="increase">[+]&lt;/span></br>
+        &emsp;&emsp;&lt;span data-ur-font-resizer-component="label">&lt;/span></br>
+        &emsp;&emsp;&lt;span data-ur-font-resizer-component="decrease">[-]&lt;/span></br>
+        &emsp;&emsp;&lt;p data-ur-font-resizer-component="content">To be or not to be, that is the question. Whether 'tis nobler in the mind to endure the slings and arrows of outrageous fortune etc etc.&lt;/p></br>
+      &lt;/div>
+      <p>
     </div>
   </div>
   
