Adding the HTML example

--- a/examples/select_list.html
+++ b/examples/select_list.html
@@ -56,7 +56,26 @@
       </div>
     </div>
     <div data-ur-tabs-component="content" data-ur-tab-id="html">
-      HTML GOES HERE
+      <p class="code">
+        &lt;div data-ur-set='select-list'><br/>
+          &emsp;&emsp;&lt;select data-ur-select-list-component='select'><br/>
+            &emsp;&emsp;&emsp;&emsp;&lt;option selected='true' value='-1'> -None- &lt;/option><br/>
+            &emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-XS'> XS &lt;/option><br/>
+            &emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-S'> S &lt;/option><br/>
+            &emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-M'> M &lt;/option><br/>
+            &emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-L'> L &lt;/option><br/>
+          &emsp;&emsp;&lt;/select><br/>
+
+
+          &emsp;&emsp;&lt;ul data-ur-select-list-component='content'><br/>
+            &emsp;&emsp;&emsp;&emsp;&lt;li value='-1'> -None- &lt;/li><br/>
+            &emsp;&emsp;&emsp;&emsp;&lt;li value='SKU-XS'> XS &lt;/li><br/>
+            &emsp;&emsp;&emsp;&emsp;&lt;li value='SKU-S'> S &lt;/li><br/>
+            &emsp;&emsp;&emsp;&emsp;&lt;li value='SKU-M'> M &lt;/li><br/>
+            &emsp;&emsp;&emsp;&emsp;&lt;li value='SKU-L'> L &lt;/li><br/>
+          &emsp;&emsp;&lt;/ul><br/>
+        &lt;/div>
+      </p>
     </div>
 </div>
 
