--- a/examples/select_buttons.html
+++ b/examples/select_buttons.html
@@ -46,7 +46,20 @@
       </div>
     </div>
     <div data-ur-tabs-component="content" data-ur-tab-id="html">
-      HTML GOES HERE
+      <p class="code">
+        &lt;div data-ur-set='select-buttons'><br/>
+          &emsp;&emsp;&lt;select data-ur-select-buttons-component='select'><br/>
+            &emsp;&emsp;&emsp;&emsp;&lt;option selected='true' value='-1'> -None- &lt;/option><br/>
+            &emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-XS'> XS &lt;/option><br/>
+            &emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-S'> S &lt;/option><br/>
+            &emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-M'> M &lt;/option><br/>
+            &emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-L'> L &lt;/option><br/>
+         &emsp;&emsp;&lt;/select><br/>
+    
+          &emsp;&emsp;&lt;span data-ur-select-buttons-component='increment'> [+] &lt;/span><br/>
+          &emsp;&emsp;&lt;span data-ur-select-buttons-component='decrement' data-ur-state='disabled'> [-] &lt;/span><br/>
+        &lt;/div>
+      </p>  
     </div>
   </div>
 </div>
